--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	font-family: 'Draft B';
+	font-family: 'Draft B', sans-serif;
 	margin: 0;
 	padding: 0;
 }
@@ -99,8 +99,10 @@ header {
 	margin-top: 18%;
 }
 
-.explore h3 {
+.explore p {
+	font-size: 20px;
 	line-height: 10px;
+	font-weight: bold;
 }
 
 .bt {
@@ -129,9 +131,10 @@ header {
 	margin-top: 30px;
 }	
 
-.prodcontent h3 {
+.prodcontent p {
 	color: #191f2f;
 	line-height: 3px;
+	font-weight: bold;
 	margin-bottom: 30px;
 }
 
@@ -262,7 +265,6 @@ footer {
 }
 
 .right-side p {
-	font-size: 12px;
 	color: #fff;
 	margin-top: 25px;
 }
